# gamos_tool

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _build_mac.sh  _build_win.sh  _install_win.sh  node.md
data/: g4_01.wrl  g4_01_cubic.wrl  g4_09.wrl  gamos.log.wrl
modules/cli11/: CLI11.pc  CMakeLists.txt  DartConfiguration.tcl
src/: g4_gamoslog_to_cubic.cpp  g4_replace_structure_value.cpp
src/common/: FileUtils.cpp  FileUtils.h  Model.h  StringUtils.cpp  StringUtils.h
src/function/: G4DCM.cpp  G4DCM.h  Gamos_Log.cpp  Gamos_Log.h  WRLHelper.h
